# quill-delta-python

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
delta/: __init__.py  base.py  html.py  op.py
playground/: index.html  quill.core.css  quill.js  quill.snow.css
tests/: test_compose.py  test_delta.py  test_diff.py  test_helpers.py  test_html.py  test_op.py  test_transform.py
