[tool.poetry]
name = "quill-delta"
version = "1.0.0"
description = "Python port of the quill.js delta library that enables operational transformation with aditional functionality for rendering html"
authors = ["Brantley Harris <brantley@forge.works>"]
license = "MIT"
homepage = "https://github.com/forgeworks/delta-py"
repository = "https://github.com/forgeworks/delta-py"
readme = "README.md"
packages = [
  { include = "delta" },
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Text Processing :: Markup'
]

[tool.poetry.dependencies]
python = "^3.6"
diff-match-patch = "^20181111.0"
lxml = {version = "^4.3", optional = true}
cssutils = {version = "^1.0", optional = true}

[tool.poetry.extras]
html = ["lxml", "cssutils"]

[tool.poetry.dev-dependencies]
pytest = "^4.5"
mock = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

